<resources>
    <string name="app_name">chatbot</string>
    <string name="logo">Logo</string>
    <string name="full_name">Full Name</string>
    <string name="em_il">em@il</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="p_s5word">p@s5wOrd</string>
    <string name="i_read_carefully_and_agree_with_t_amp_c"><![CDATA[I read carefully and agree with T&C]]></string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
</resources>
